fix right menu align bug

--- a/css/main.css
+++ b/css/main.css
@@ -7,8 +7,8 @@ html, body {
 
 #nav_top {
     position: fixed;
-    left: 0px;
     top: 0px;
+    left: 0px;
     width: 100%;
     height: 60px;
     background-color: rgba(255,255,255,0.1);
@@ -16,9 +16,9 @@ html, body {
 }
 
 #nav_top_title {
-    position: absolute;
-    left: 0px;
+    position: absolute;    
     top: 0px;
+    left: 0px;
     height: 60px;
     padding-left: 25px;
     line-height: 60px;
@@ -26,11 +26,11 @@ html, body {
 }
 
 #nav_top_menu {
-    position: absolute;
-    right: 60px;
+    position: absolute;    
     top: 0px;
+    right: 60px;
     height: 60px;
-    padding-right: 15px;    
+    padding-right: 15px;        
 }
 
 .nav_top_menu_item {
@@ -51,9 +51,9 @@ html, body {
 }
 
 #nav_right {
-    position: fixed;
-    right: 0px;
+    position: fixed;    
     top: 0px;
+    right: 0px;
     width: 60px;
     height: 100%;
     background-color: rgba(255,255,255,0.1);
@@ -62,17 +62,18 @@ html, body {
 
 #nav_right_menu {
     position: absolute;
-    right: 0px;
     top: 0;
     bottom: 0;
+    right: 0px;    
     height: 240px;
-    margin: auto;   
+    margin: auto;
 }
 
 .nav_right_menu_item {
     border-left: 1px solid rgba(255, 255, 255, 0);
+    padding-top: 8px;
     width: 60px;
-    height: 60px;
+    height: 52px;
     color: white;
     cursor: pointer;
     -webkit-transition: border-color 0.5s ease;
@@ -120,7 +121,7 @@ html, body {
 }
 
 .filter {
-     position: relative;
+    position: relative;
     left: 0px;
     width: 100%;
     height: 100vh;
